# ChangeLog for media-sound/mp3splt-gtk
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mp3splt-gtk/ChangeLog,v 1.22 2011/09/23 21:26:49 sping Exp $

*mp3splt-gtk-0.7.0.930 (23 Sep 2011)

  23 Sep 2011; Sebastian Pipping <sping@gentoo.org>
  +mp3splt-gtk-0.7.0.930.ebuild, +files/mp3splt-gtk-0.7.0.930-gtk.patch,
  metadata.xml:
  Bump to latest snapshot for support of both Audacious/GTK 2.x/3.x

*mp3splt-gtk-0.7.0.920 (06 Sep 2011)

  06 Sep 2011; Sebastian Pipping <sping@gentoo.org>
  +mp3splt-gtk-0.7.0.920.ebuild:
  Bump to upstream's snapshot of SVN revision 920

  03 Aug 2011; Sebastian Pipping <sping@gentoo.org> mp3splt-gtk-0.7.ebuild,
  +files/mp3splt-gtk-0.7-disable-docs.patch:
  Disable generation of source documentation

*mp3splt-gtk-0.7 (03 Aug 2011)

  03 Aug 2011; Sebastian Pipping <sping@gentoo.org> +mp3splt-gtk-0.7.ebuild:
  Bump to 0.7, enable gnome support, restrict Audacious support to <3.0 due to
  build failurs with mixed GTK 2 and 3

  10 Oct 2010; Raúl Porcel <armin76@gentoo.org> mp3splt-gtk-0.5.9.ebuild:
  sparc stable wrt #326139

  15 Jul 2010; Markus Meier <maekke@gentoo.org> mp3splt-gtk-0.5.9.ebuild:
  x86 stable, bug #326139

  29 Jun 2010; Christoph Mende <angelos@gentoo.org>
  mp3splt-gtk-0.5.9.ebuild:
  Stable on amd64 wrt bug #326139

  02 May 2010; Samuli Suominen <ssuominen@gentoo.org>
  mp3splt-gtk-0.5.9.ebuild:
  Fix audacious plug-in building wrt #318141 by Rafał Mużyło and Jochen
  Schlick.

*mp3splt-gtk-0.5.9 (28 Apr 2010)

  28 Apr 2010; Samuli Suominen <ssuominen@gentoo.org>
  +mp3splt-gtk-0.5.9.ebuild:
  Version bump.

*mp3splt-gtk-0.5.6 (10 Jun 2009)

  10 Jun 2009; Samuli Suominen <ssuominen@gentoo.org>
  +mp3splt-gtk-0.5.6.ebuild:
  Version bump.

  10 Jun 2009; Raúl Porcel <armin76@gentoo.org> mp3splt-gtk-0.5.4.ebuild:
  sparc stable wrt #272104

  06 Jun 2009; nixnut <nixnut@gentoo.org> mp3splt-gtk-0.5.4.ebuild:
  ppc stable #272104
