@@ -6,17 +6,19 @@ AUX mp3splt-gtk-0.7.0.930-gtk.patch 1413 RMD160 a383dc7ab0dabc7a73586a08af1bc62b
 DIST mp3splt-gtk-0.5.9.tar.gz 304691 RMD160 4f2316ef03ab3bfc57a63af3b47cbe0a015bfd15 SHA1 b8d002b8714ce9f0c21c830613b6bb2737eb6837 SHA256 6742caf7f79246d1b06d2dd9fb53c9d7d9df97508dcd6dc716e6f679ef2905b3
 DIST mp3splt-gtk-0.7.0.920.tar.gz 854263 RMD160 7f5fc4af5dcfab95ee9e03473e690f4f278e8a9d SHA1 ffd82fb634b211c5a6f2641b31a7593b4de7f4a8 SHA256 16b7cec7bd2375db89b4ad0b463ec6dcefbd33c434b411de138ade7812f12ee2
 DIST mp3splt-gtk-0.7.0.930.tar.gz 856532 RMD160 9c05bb2f24365e06ad5ff5f9b8cc07a730a20802 SHA1 0497ad415c5d1513cc3995bf9a8c98da7632565f SHA256 5c242b0141798f565e95b67e88ba317ad8190249a1c362ad1cb3625d98e01d31
+DIST mp3splt-gtk-0.7.1.tar.gz 856040 RMD160 2799af0a51c80230ba733739ae9179dd2f5f11b8 SHA1 ae1b33c213be760e1f8d040d748954c9ffc2bba3 SHA256 b3f54a62dae55cfabab7aff3ae2f5627093dee27675635b04b425f3214bcdd62
 DIST mp3splt-gtk-0.7.tar.gz 849473 RMD160 34af2506fca171b2c8650b931a508751a2cb1e2f SHA1 06b0d86342a24426905ce355e3fcc417249ec4ee SHA256 67046b0ab119907e8614089d42f180bdca034e758e24e2d078308e4d26fe8fd0
 EBUILD mp3splt-gtk-0.5.9.ebuild 1303 RMD160 5bfa4551a55bd5cd8a5ec2132b73c066c95f7e14 SHA1 afba21233ef1f407d91f2d1f23cbb1756b16d734 SHA256 2960c769dd42ca0ff705acff6f239be729727967f1fa2875e4cb1e33229eb5f8
 EBUILD mp3splt-gtk-0.7.0.920.ebuild 1598 RMD160 34ae935822f38da5f28c1299def6d8182728834b SHA1 4362532356cc7bb6e26053acb1d3cf541263b18d SHA256 8b786087110ebac245eab26dc892ec668eb631e582d89ac2d697602113b8134c
 EBUILD mp3splt-gtk-0.7.0.930.ebuild 1683 RMD160 06b3bf74723a4e2ed18c0b9ca899759538a79d64 SHA1 cdf17dd3c9eb67dd9461a7166cfb2a955ed443c9 SHA256 a9178f2cdecaa8c553807e10d7d21d4acef0ef3d803d35e98d976482d31d7610
+EBUILD mp3splt-gtk-0.7.1.ebuild 1594 RMD160 1ca4947e2623c2e5e969175120e365d810091be8 SHA1 d813d4fec0faa75209b65c952cb9cdd490890a39 SHA256 b2e2bac476df368c3c25e9725d804a4dc7e5a08b28eebc2ea0eb2fbdf8d22235
 EBUILD mp3splt-gtk-0.7.ebuild 1532 RMD160 fe4dc4f212b690ec7d8c6df848a91750b4b374cd SHA1 3401e23b4a84256f44e8c316208c2d7604fca799 SHA256 3329748754cf5f4d0f80ef674efdaaf877f7b76abb7ebb649fcef3451bab974f
-MISC ChangeLog 3317 RMD160 b6d1bf2faa9b58c4c4c0e9ce8f68d2bcb9ba314a SHA1 d81dfc4efb9c04415db16cb3431cd67ec4b35385 SHA256 fc7c6ba4efecf79e15b39487da512325a282a20f50f0efe86f43c28398f28158
+MISC ChangeLog 3462 RMD160 c17a16786cd536d6ccce0e8afe99064a2942a644 SHA1 fb49374e579c50b5e50066a0d5eaca21707df6fd SHA256 a1c1d037454446602722b27a89c7e320e7589d23abea76ec0084c22b7b781e7c
 MISC metadata.xml 456 RMD160 8ff8ce2874dac3d4c4311f66d0b09bf07c85423c SHA1 667769978970b7ec6a6ebd6bbb3f5183f54323c3 SHA256 9f9f9850d89bbf3730cc288e9c0dda30e23a2fb79aed5ac69d2f9e1a7ff055cf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk58+ZoACgkQsAvGakAaFgBz5wCcDcDXxxfdX/pSjq9ekOZnpgF1
-KV0AmgPaMbP1D31stWly+uWW4I1B6/V3
-=UC7j
+iEYEARECAAYFAk8ELckACgkQsAvGakAaFgD7FgCfcFWTlgyIEX2I/uE/praG5DKo
+2e0AoL06uG/FPA3OoNEn2DbZOS1PmjSN
+=h3Za
 -----END PGP SIGNATURE-----
