@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/mp3splt-gtk
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mp3splt-gtk/ChangeLog,v 1.22 2011/09/23 21:26:49 sping Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mp3splt-gtk/ChangeLog,v 1.23 2012/01/04 10:45:44 sping Exp $
+
+*mp3splt-gtk-0.7.1 (04 Jan 2012)
+
+  04 Jan 2012; Sebastian Pipping <sping@gentoo.org> +mp3splt-gtk-0.7.1.ebuild:
+  Bump to 0.7.1, looks trivial
 
 *mp3splt-gtk-0.7.0.930 (23 Sep 2011)
 
